--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   <script>
     async function getISS() {
       const response = await fetch('https://api.wheretheiss.at/v1/satellites/25544')
-
+      const data = await response.json()
+      console.log(data)
+      // console.log("hi")
     }
+    getISS()
   </script>
 </body>
 </html>
