used JS destructuring to put data into variables

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     async function getISS() {
       const response = await fetch('https://api.wheretheiss.at/v1/satellites/25544')
       const data = await response.json()
-      console.log(data)
+      // console.log(data)
       // console.log("hi")
+      const {latitude, longitude} = data;
+      console.log(latitude)
+      console.log(longitude)
+
     }
     getISS()
   </script>
