--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <title>Fetch JSON from api</title>
 </head>
 <body>
+  <h1>Where is the ISS</h1>
+  <p>
+    latitude: <span id="lat"></span><br />
+    longitude: <span id="lon"></span>
+  </p>
   <script>
     async function getISS() {
       const response = await fetch('https://api.wheretheiss.at/v1/satellites/25544')
@@ -16,6 +21,9 @@
       const {latitude, longitude} = data;
       console.log(latitude)
       console.log(longitude)
+
+      document.getElementById('lat').textContent = latitude
+      document.getElementById('lon').textContent = longitude
 
     }
     getISS()
